# planky

./: .gitignore  Cargo.toml  LICENSE  README.md  TRADEMARK.md
src/: app.rs  daemon.rs  main.rs  planka.rs  todo.rs  tui.rs
swagger/: swagger.html
