[package]
name = "planky"
version = "3.0.12"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A TUI based todo app written in Rust with search and cross platoform notification support"
readme = "README.md"
repository = "https://github.com/chaos-dotcom/Planky.git"
keywords = ["todo", "tui", "cli", "rust"]
categories = ["command-line-utilities"]
homepage = "https://github.com/chaos-dotcom/Planky.git"
[dependencies]
directories = "6.0"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls", "cookies", "multipart"] }
textwrap = "0.16"

[target.'cfg(unix)'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
notifica = "3.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.9"
